--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>小白AI播放器</title>
+    <title>bfjy播放器</title>
   </head>
   <body>
     <div class="wrapper" id="app">
@@ -79,7 +79,7 @@
         </div>
         <div v-cloak></div>
       </div>
-      <a href="#" class="github-btn">By 小白AI @2024</a>
+      <a href="bfjy2024.github.io/bfjy" class="github-btn">By 不放酱油 @2024</a>
     </div>
 
     <svg
