--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -89,8 +89,6 @@
       xmlns:xlink="http://www.w3.org/1999/xlink"
     >
       <defs>
-        <symbol id="icon-heart-o" viewBox="0 0 32 32">
-        </symbol>
         <symbol id="icon-infinity" viewBox="0 0 32 32">
           <title>icon-infinity</title>
           <path
