--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div v-cloak></div>
       </div>
-      <a href="bfjy2024.github.io/bfjy" class="github-btn">By 不放酱油 @2024</a>
+      <a href="https://bfjy2024.github.io/bfjy" class="github-btn">By 不放酱油 @2024</a>
     </div>
 
     <svg
